# airindex-public

./: .gitignore  Cargo.toml  README.md  dataset_setup.md  keyset_setup.md  reload_examples.md
resources/test/: small.txt
scripts/: data_calculator_sosd.sh  generate_sosd_keysets.sh  generate_sosd_keysets_zipf.sh  measure_build.sh  sosd_experiment.sh  sosd_experiment_fixload.sh  sosd_variants.sh  storage_explore.sh  storage_inspect.sh
src/: lib.rs
src/common/: error.rs  mod.rs
src/db/: key_rank.rs  mod.rs
src/index/: hierarchical.rs  mod.rs  naive.rs  piecewise.rs  stash.rs
src/io/: internal.rs  intervals.rs  mod.rs  profile.rs  storage.rs
src/meta/: mod.rs
src/model/: band.rs  load.rs  mod.rs  step.rs  toolkit.rs
src/store/: array_store.rs  block_store.rs  complexity.rs  key_buffer.rs  key_position.rs  mod.rs  store_designer.rs
