[package]
name = "airindex"
description = "Learned index on external memory model for key-value data"
version = "0.1.0"
authors = ["Supawit Chockchowwat <supawit2@illinois.edu>"]
edition = "2021"
# keywords = ["kv", kv-store", "kv store", "key-value", "key-value store", "external memory", "disk", "hdd", "ssd", "network", "nfs", "file systems", "learned index", "index", "hierarchical index", "model"]
repository = "https://github.com/illinoisdata/airindex-public"
readme = "https://github.com/illinoisdata/airindex-public/blob/main/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

azure_core = "0.1.1"
azure_storage = "0.1.0"
azure_storage_blobs = "0.1.0"
bitvec = "1.0.0"
byteorder = "1.4.3"
bytes = "1.1.0"
derive_more = "0.99.17"
env_logger = "0.9.0"
itertools = "0.10.3"
log = "0.4.14"
memmap2 = "0.5.2"
openssl = { version = "0.10.38", features = ["vendored"] }
postcard = { version = "0.7.2", features = ["use-std"] }
rand = "0.8.3"
rand_pcg = "0.3.1"
rayon = "1.5.1"
sscanf = "0.1.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
structopt = { version = "0.3", default-features = false }
tempfile = "3"
test-log = "0.2.8"
tokio = { version = "1.16.1", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tracing-timing = "0.6.0"
url = "2.2.2"
zipf = "7.0.0"

[[bin]]
name = "sosd_keyset"
path = "src/bin/sosd_keyset.rs"

[[bin]]
name = "sosd_experiment"
path = "src/bin/sosd_experiment.rs"
